; ModuleID = '/home/carl/AnghaBench/seafile/common/extr_vc-common.c_gen_conflict_path_wrapper.c'
source_filename = "/home/carl/AnghaBench/seafile/common/extr_vc-common.c_gen_conflict_path_wrapper.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @gen_conflict_path_wrapper(i8* %0, i32 %1, i8* %2, i8* %3, i8* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  store i8* %0, i8** %7, align 8
  store i32 %1, i32* %8, align 4
  store i8* %2, i8** %9, align 8
  store i8* %3, i8** %10, align 8
  store i8* %4, i8** %11, align 8
  %14 = load i8*, i8** %7, align 8
  %15 = load i8*, i8** %7, align 8
  %16 = load i32, i32* %8, align 4
  %17 = load i8*, i8** %9, align 8
  %18 = load i8*, i8** %10, align 8
  %19 = call i64 @get_file_modifier_mtime(i8* %14, i8* %15, i32 %16, i8* %17, i8* %18, i8** %12, i32* %13)
  %20 = icmp slt i64 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %5
  store i8* null, i8** %6, align 8
  br label %27

22:                                               ; preds = %5
  %23 = load i8*, i8** %11, align 8
  %24 = load i8*, i8** %12, align 8
  %25 = load i32, i32* %13, align 4
  %26 = call i8* @gen_conflict_path(i8* %23, i8* %24, i32 %25)
  store i8* %26, i8** %6, align 8
  br label %27

27:                                               ; preds = %22, %21
  %28 = load i8*, i8** %6, align 8
  ret i8* %28
}

declare dso_local i64 @get_file_modifier_mtime(i8*, i8*, i32, i8*, i8*, i8**, i32*) #1

declare dso_local i8* @gen_conflict_path(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
